# icepool

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.md  README  README.md  THANKS.md  index.html  jupyter-lite.json  jupyter_lite_config.json  notebook_requirements.txt  pytest.ini  readme_example.py  setup.cfg
.github/workflows/: deploy-apidoc-pinned.yml  deploy-apidoc-release.yml  deploy-apidoc.yml  deploy-apps.yml  deploy-base.yml  deploy-notebooks.yml  deploy-readme.yml  publish-pypi.yml  run-tests.yml
apidoc/: icepool.html  search.js
apidoc/icepool/: evaluator.html  expression.html  typing.html
apidoc/latest/: icepool.html  search.js
apps/: ability_scores.html  common.js  cortex_prime.html  cortex_prime_effect.html  honkai_star_rail_relic.html  icecup.html  index.html  legends_of_the_wulin.html  puddle.html  repl.html  styles.css  year_zero_engine.html
hdroller/: __init__.py  choose.py  convolution_series.py  die.py  die_repeater.py  die_sort.py  matching_sets.py  math.py  mixed_dice_pool.py  multichoose_array.py  multichoose_array_test.py  pure_dice_pool.py
misc/: dice_svg.py  generate_icon.py  generate_qr_codes.py  icon_svg.py
notebooks/: README.md  ability_scores.ipynb  all_matching_sets.ipynb  bitd.ipynb  broken_compass.ipynb  cortex_prime.ipynb  cthulhutech.ipynb  hello_3d6.ipynb  household.ipynb  infinity_universe.ipynb  ironsworn.ipynb  isaksen2016.ipynb  jupyter-lite.json  l5r.ipynb  neon_city_overdrive.ipynb  outgunned.ipynb  risk.ipynb  soulbound.ipynb  technoir.ipynb  vampire_v5.ipynb
scripts/: README.md  add_pool_opposed.py  ehp1.py  exploding_non_opposed.py  find_success_die.py  keep_highest.py  keep_highest_explode.py  median_test.py  pmf.py  point_buy.py  poisson.py  risk.py  step_dice_roll_over.py  success_pool_anim.py  test.py
tests/: again_test.py  align_test.py  apply_test.py  arithmetic_test.py  break_test.py  brute_force.py  compair_test.py  comparator_test.py  compare_distributions_test.py  count_dice_test.py  count_sorted_test.py  creation_test.py  deck_test.py  die_repeater_test.py  die_sort_test.py  empty_test.py  eval_pool_test.py  evaluator_cache_test.py  evaluator_test.py  explode_reroll_test.py  explode_test.py  expression_keep_test.py  expression_test.py  format_test.py  from_cumulative_test.py  from_rv_test.py  function_test.py  generator_binary_operator_test.py  generator_operator_test.py  hashable_test.py  import_all_test.py  keep_algorithm_test.py  keep_test.py  lexi_test.py  logical_test.py  map_test.py  map_to_pool_test.py  match_test.py  math_test.py  mix_test.py  (+32 more)
(+594 files in other folders)
