[metadata]
name = icepool
version = 0.25.2
author = Albert Julius Liu
author_email = ajul1987+highdiceroller@gmail.com
description = A package for computing dice probabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HighDiceRoller/icepool
project_urls =
    Twitter = https://twitter.com/highdiceroller
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Role-Playing
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
